tests/errors/not_equatable_err/not_equatable_err.c
#error not_equatable_err.not_equatable_err:7:40 Operator (=) is not supported for the type: obj
#error not_equatable_err.not_equatable_err:9:36 Operator (=) is not supported for the type: unit -> int
#error not_equatable_err.not_equatable_err:11:54 Operator (=) is not supported for the type: (obj * int)
#error not_equatable_err.not_equatable_err:15:54 Operator (=) is not supported for the type: UnionWithFun
#error not_equatable_err.not_equatable_err:19:48 Operator (=) is not supported for the type: GU<unit -> int>
#error not_equatable_err.not_equatable_err:23:66 Operator (=) is not supported for the type: MyNode<unit -> int>
#error not_equatable_err.not_equatable_err:29:13 Operator (=) is not supported for the type: RecordWithFun
